--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -20,33 +19,33 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-
-# Virtual Environment
+.env
 venv/
 ENV/
-.env
 
-# IDE
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.pnp
+.pnp.js
+
+# IDEs and editors
 .idea/
 .vscode/
 *.swp
 *.swo
-.project
-.pydevproject
-.settings/
-
-# Project specific
-exports/
-*.mp4
-*.avi
-*.mkv
-*.mov
-*.png
-*.jpg
-*.jpeg
-*.bmp
-
-# OS specific
 .DS_Store
 Thumbs.db
-desktop.ini 
+
+# Project specific
+web/server/uploads/
+web/server/annotations/
+exports/
+python/exports/
+*.log 
