fix: Implement persistent annotations and improve file handling
- Add consistent filename generation for uploaded images
- Implement proper annotation file storage and retrieval
- Fix fs module usage by separating sync and async operations
- Add proper error handling for file operations
- Configure nodemon to ignore data directories
- Add debug logging for annotation loading/saving

The changes ensure that:
1. Same image gets same filename on repeated uploads
2. Annotations are saved with consistent filenames
3. Annotations persist between image loads
4. File system operations handle errors gracefully
5. Server doesn't restart on data file changes

--- a/web/server/package.json
+++ b/web/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend server for GameAnno web version",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "nodemon --config nodemon.json src/index.js",
     "test": "jest"
   },
   "dependencies": {
