--- a/web/server/package.json
+++ b/web/server/package.json
@@ -8,18 +8,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "archiver": "^7.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "multer": "^1.4.5-lts.1",
     "sharp": "^0.33.1",
-    "uuid": "^9.0.1",
-    "helmet": "^7.1.0",
-    "express-rate-limit": "^7.1.5",
-    "hpp": "^0.2.3",
-    "express-validator": "^7.0.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2"
   }
-} 
+}
